--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,11 @@ body {
 .inline_block {
   display: inline-block;
 }
+
+.textarea_shadow {
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
+.textarea_shadow:focus {
+  outline: none;
+}
